[project]
name = "PyUMLS_Similarity"
version = "0.1.1"
authors = [
  { name="Victor Murcia", email="victor.murciaruiz@va.gov" },
]
maintainers = [
  {name="Victor Murcia", email="victor.murciaruiz@va.gov" }
]
description = "This package computes a variety of similarity metrics between concepts present in the UMLS database"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "tqdm>=4.66.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["NLP", "semantic similarity", "medicine", "UMLS", "Lobster Thermidor"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/victormurcia/PyUMLS_Similarity"
Repository = "https://github.com/victormurcia/PyUMLS_Similarity"
Issues = "https://github.com/victormurcia/PyUMLS_Similarity/issues"